--- a/tests/python/test_ipython.ipynb
+++ b/tests/python/test_ipython.ipynb
@@ -1,19 +1,21 @@
 {
-  "cells" : [
+  "cells": [
     {
-      "cell_type" : "markdown",
-      "id" : "51b3b00e",
-      "metadata" : {},
-      "source" : ["# Count primes below a given bound"]
+      "cell_type": "markdown",
+      "id": "51b3b00e",
+      "metadata": {},
+      "source": [
+        "# Count primes below a given bound"
+      ]
     },
     {
-      "cell_type" : "code",
-      "execution_count" : null,
-      "id" : "83062572",
-      "metadata" : {},
-      "outputs" : [],
-      "source" : [
-        "import taichi as ti\n",
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "83062572",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import gs_taichi as ti\n",
         "\n",
         "\n",
         "def test_kernel_print():\n",
@@ -43,22 +45,25 @@
       ]
     }
   ],
-  "metadata" : {
-    "kernelspec" : {
-      "display_name" : "Python 3 (ipykernel)",
-      "language" : "python",
-      "name" : "python3"
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
     },
-    "language_info" : {
-      "codemirror_mode" : {"name" : "ipython", "version" : 3},
-      "file_extension" : ".py",
-      "mimetype" : "text/x-python",
-      "name" : "python",
-      "nbconvert_exporter" : "python",
-      "pygments_lexer" : "ipython3",
-      "version" : "3.10.6"
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.6"
     }
   },
-  "nbformat" : 4,
-  "nbformat_minor" : 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
