--- a/hp/add-print-non-pure/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/hp/add-print-non-pure/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -199,6 +199,8 @@ Module Contents
    :param default_ip: Default integral type.
    :type default_ip: Optional[type]
    :param require_version: A version string.
+   :param print_non_pure: Print the names of kernels, at the time they are executed, which are not annotated with
+                          @ti.pure
    :param src_ll_cache: enable SRC-LL-CACHE, which will accelerate loading from cache, across all architectures,
                         for pure kernels (i.e. kernels declared as @ti.pure)
    :param \*\*kwargs: GsTaichi provides highly customizable compilation through
