deploy: 10e2f02aaa8695e08ab962d6cd794e8e79c16c00

--- a/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -186,7 +186,7 @@ Module Contents
        # will raise error because a is unavailable after reset.
 
 
-.. py:function:: init(arch=None, default_fp=None, default_ip=None, _test_mode: bool = False, enable_fallback: bool = True, require_version: str | None = None, src_ll_cache: bool = True, **kwargs)
+.. py:function:: init(arch=None, default_fp=None, default_ip=None, _test_mode: bool = False, enable_fallback: bool = True, require_version: str | None = None, print_non_pure: bool = False, src_ll_cache: bool = True, **kwargs)
 
    Initializes the GsTaichi runtime.
 
@@ -199,6 +199,8 @@ Module Contents
    :param default_ip: Default integral type.
    :type default_ip: Optional[type]
    :param require_version: A version string.
+   :param print_non_pure: Print the names of kernels, at the time they are executed, which are not annotated with
+                          @ti.pure
    :param src_ll_cache: enable SRC-LL-CACHE, which will accelerate loading from cache, across all architectures,
                         for pure kernels (i.e. kernels declared as @ti.pure)
    :param \*\*kwargs: GsTaichi provides highly customizable compilation through
