--- a/hp/pure-kernel-parameter-v3/_sources/autoapi/gstaichi/lang/kernel_impl/index.rst.txt
+++ b/hp/pure-kernel-parameter-v3/_sources/autoapi/gstaichi/lang/kernel_impl/index.rst.txt
@@ -64,7 +64,7 @@ Module Contents
    :rtype: Callable
 
 
-.. py:function:: kernel(_fn: None = None, *, pure: bool = False) -> Callable[[F], F]
+.. py:function:: kernel(_fn: None = None, *, pure: bool = False) -> Callable[[Any], Any]
                  kernel(_fn: Any, *, pure: bool = False) -> Any
 
    Marks a function as a GsTaichi kernel.
