--- a/hp/fastcache-observability-changes/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/hp/fastcache-observability-changes/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -186,7 +186,7 @@ Module Contents
        # will raise error because a is unavailable after reset.
 
 
-.. py:function:: init(arch=None, default_fp=None, default_ip=None, _test_mode: bool = False, enable_fallback: bool = True, require_version: str | None = None, print_non_pure: bool = False, src_ll_cache: bool = True, **kwargs)
+.. py:function:: init(arch=None, default_fp=None, default_ip=None, _test_mode: bool = False, enable_fallback: bool = True, require_version: str | None = None, print_non_pure: bool = False, src_ll_cache: bool = True, debug_dump_path: str = '/tmp', **kwargs)
 
    Initializes the GsTaichi runtime.
 
@@ -203,6 +203,7 @@ Module Contents
                           @ti.pure
    :param src_ll_cache: enable SRC-LL-CACHE, which will accelerate loading from cache, across all architectures,
                         for pure kernels (i.e. kernels declared as @ti.pure)
+   :param debug_dump_path: used as the base path for TI_DUMP_KERNEL_CHECKSUMS and similar
    :param \*\*kwargs: GsTaichi provides highly customizable compilation through
                       ``kwargs``, which allows for fine grained control of GsTaichi compiler
                       behavior. Below we list some of the most frequently used ones. For a
