--- a/hp/better-ti-lib-dir-prompt/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/hp/better-ti-lib-dir-prompt/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -214,6 +214,7 @@ Module Contents
                       * ``print_ir`` (bool): Prints the CHI IR of the GsTaichi kernels.
                       *``offline_cache`` (bool): Enables offline cache of the compiled kernels. Default to True. When this is enabled GsTaichi will cache compiled kernel on your local disk to accelerate future calls.
                       *``random_seed`` (int): Sets the seed of the random generator. The default is 0.
+                      *``debug_dump_path`` (str): used as the base path for TI_DUMP_KERNEL_CHECKSUMS and similar
 
 
 .. py:function:: no_activate(*args)
