deploy: 9355894febcecbe852144123cc3b09ed52d6c79a

--- a/hp/fail-on-non-static-range-in-back/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
+++ b/hp/fail-on-non-static-range-in-back/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
@@ -264,6 +264,12 @@ Module Contents
    .. py:attribute:: autodiff_mode
 
 
+   .. py:attribute:: loop_depth
+      :type:  int
+      :value: 0
+
+
+
    .. py:method:: variable_scope_guard()
 
 
