deploy: 9259c8ca4f6bc5ceae33cba39d4ea5cca98f1c78

--- a/hp/dlpack-field/_sources/autoapi/gstaichi/lang/matrix/index.rst.txt
+++ b/hp/dlpack-field/_sources/autoapi/gstaichi/lang/matrix/index.rst.txt
@@ -674,6 +674,9 @@ Module Contents
    .. py:attribute:: ptr
 
 
+   .. py:method:: to_dlpack()
+
+
    .. py:method:: get_scalar_field(*indices)
 
       Creates a ScalarField using a specific field member.
