deploy: 16f25970c8731a34339a2bfef66645aa699271de

--- a/hp/dump-compile-config/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/hp/dump-compile-config/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -383,3 +383,7 @@ Module Contents
 
 .. py:function:: dump_compile_config() -> None
 
+   Dumps the compile config, which can be usful for example in diagnosing fastcache issues, since
+   the fastcache cache keys depend on the compile config.
+
+
