--- a/duburcqa/speedup_process_args/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
+++ b/duburcqa/speedup_process_args/_sources/autoapi/gstaichi/lang/misc/index.rst.txt
@@ -52,6 +52,7 @@ Functions
    gstaichi.lang.misc.global_thread_idx
    gstaichi.lang.misc.mesh_patch_idx
    gstaichi.lang.misc.is_extension_enabled
+   gstaichi.lang.misc.dump_compile_config
 
 
 Module Contents
@@ -378,5 +379,11 @@ Module Contents
    Directly returns whether extension is enabled, without needing to
    pass in current architecture. Also takes into account config, in the case
    of adstack
+
+
+.. py:function:: dump_compile_config() -> None
+
+   Dumps the compile config, which can be usful for example in diagnosing fastcache issues, since
+   the fastcache cache keys depend on the compile config.
 
 
