--- a/hp/remove-aws-uploads/_sources/autoapi/gstaichi/lang/matrix/index.rst.txt
+++ b/hp/remove-aws-uploads/_sources/autoapi/gstaichi/lang/matrix/index.rst.txt
@@ -676,6 +676,10 @@ Module Contents
 
    .. py:method:: to_dlpack()
 
+      Note: caller is responsible for calling ti.sync() between modifying the field, and
+      reading it.
+
+
 
    .. py:method:: get_scalar_field(*indices)
 
