deploy: 719c5e7e843c23c54da1e2d23734ccd3cafe3348

--- a/duburcqa/fix_cuda_clock_expose/_sources/autoapi/gstaichi/lang/simt/timer/index.rst.txt
+++ b/duburcqa/fix_cuda_clock_expose/_sources/autoapi/gstaichi/lang/simt/timer/index.rst.txt
@@ -17,3 +17,9 @@ Module Contents
 
 .. py:function:: cuda_clock_i64()
 
+   Returns the value of a per-multiprocessor counter that is incremented every clock cycle.
+
+   See official documentation for details:
+   https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#time-function
+
+
