deploy: 7e2d656fa5571326b17111cda95734c565d6e6a6

--- a/duburcqa/fix_cuda_clock_expose/_sources/autoapi/gstaichi/lang/simt/timer/index.rst.txt
+++ b/duburcqa/fix_cuda_clock_expose/_sources/autoapi/gstaichi/lang/simt/timer/index.rst.txt
@@ -19,6 +19,8 @@ Module Contents
 
    Returns the value of a per-multiprocessor counter that is incremented every clock cycle.
 
+   It returns 0 for unsupported arch instead of raising an exception since failure is harmless.
+
    See official documentation for details:
    https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#time-function
 
