--- a/hp/func-base-refactorization/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
+++ b/hp/func-base-refactorization/_sources/autoapi/gstaichi/lang/ast/ast_transformer_utils/index.rst.txt
@@ -168,7 +168,7 @@ Module Contents
       :type:  str
 
 
-.. py:class:: ASTTransformerContext(excluded_parameters, end_lineno: int, is_kernel: bool, func: Func | Kernel, arg_features: list[tuple[Any, Ellipsis]] | None, global_vars: dict[str, Any], template_vars: dict[str, Any], is_pure: bool, argument_data, file: str, src: list[str], start_lineno: int, ast_builder: gstaichi._lib.core.gstaichi_python.ASTBuilder | None, is_real_function: bool, autodiff_mode: AutodiffMode, raise_on_templated_floats: bool, used_py_dataclass_parameters_collecting: set[str], used_py_dataclass_parameters_enforcing: set[str] | None)
+.. py:class:: ASTTransformerContext(excluded_parameters, end_lineno: int, is_kernel: bool, func: gstaichi.lang._func_base.FuncBase, arg_features: list[tuple[Any, Ellipsis]] | None, global_vars: dict[str, Any], template_vars: dict[str, Any], is_pure: bool, argument_data, file: str, src: list[str], start_lineno: int, ast_builder: gstaichi._lib.core.gstaichi_python.ASTBuilder | None, is_real_function: bool, autodiff_mode: AutodiffMode, raise_on_templated_floats: bool, used_py_dataclass_parameters_collecting: set[str], used_py_dataclass_parameters_enforcing: set[str] | None)
 
    .. py:attribute:: func
 
