deploy: 5361c00207f6063df2e2b5f8755aeff166feb780

--- a/hp/func-base-refactorization/_sources/autoapi/gstaichi/lang/kernel/index.rst.txt
+++ b/hp/func-base-refactorization/_sources/autoapi/gstaichi/lang/kernel/index.rst.txt
@@ -34,7 +34,7 @@ Module Contents
 
 .. py:class:: LaunchContextBufferCache
 
-   .. py:method:: cache(t_kernel, args_hash, launch_ctx, launch_ctx_buffer: dict[gstaichi.lang._kernel_types._KernelBatchedArgType, list[tuple]]) -> None
+   .. py:method:: cache(t_kernel, args_hash, launch_ctx, launch_ctx_buffer: dict[gstaichi.lang._kernel_types.KernelBatchedArgType, list[tuple]]) -> None
 
 
    .. py:method:: populate_launch_ctx_from_cache(args_hash, launch_ctx) -> tuple[gstaichi.lang.impl.Program, bool]
